--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -50,7 +50,7 @@ jobs:
     if: >-
       github.event_name == 'workflow_dispatch' ||
       (github.event_name == 'pull_request' && github.event.action != 'close' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) ||
-      (github.event_name == 'pull_request' && github.event.action == 'synchronize')
+      (github.event_name == 'pull_request' && github.event.action == 'close')
     runs-on: ${{ github.event.inputs.runner || inputs.runner }}
     timeout-minutes: 60
     steps:
@@ -78,9 +78,6 @@ jobs:
           echo "branch=${branch}" | tee -a $GITHUB_OUTPUT
           echo "architecture=${architecture}" | tee -a $GITHUB_OUTPUT
           echo "publish_type=${publish_type}" | tee -a $GITHUB_OUTPUT
-          set -x
-          echo "Event Name: ${{ github.event_name}}"
-          echo "Pull request action: ${{ github.event.action }}"
 
       - name: Checkout repository
         uses: actions/checkout@v4
