--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,14 +25,14 @@ jobs:
           binary:
             - architecture: x86_64-linux
               runner: self-hosted-hoprnet-big
-            - architecture: aarch64-linux
-              runner: self-hosted-hoprnet-big
-            - architecture: armv7l-linux
-              runner: self-hosted-hoprnet-big
-            - architecture: aarch64-darwin
-              runner: macos-14
-            - architecture: x86_64-darwin
-              runner: macos-13
+            # - architecture: aarch64-linux
+            #   runner: self-hosted-hoprnet-big
+            # - architecture: armv7l-linux
+            #   runner: self-hosted-hoprnet-big
+            # - architecture: aarch64-darwin
+            #   runner: macos-14
+            # - architecture: x86_64-darwin
+            #   runner: macos-13
       name: Binary ${{ matrix.binary.architecture }}
       uses: ./.github/workflows/build-binaries.yaml
       with:
@@ -52,7 +52,6 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
               with:
-                  ref: main # if you want to use a different branch keep in mind that the bump version step will be affected
                   token: '${{ secrets.GH_RUNNER_TOKEN }}'
 
             - name: Setup GCP
@@ -68,7 +67,6 @@ jobs:
                   release_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
                   echo "release_version=${release_version}" >> $GITHUB_OUTPUT
 
-
             - name: Create Release
               uses: softprops/action-gh-release@v2
               with:
@@ -78,6 +76,7 @@ jobs:
             - name: Publish binaries
               run: |
                   architectures=("aarch64-darwin" "x86_64-darwin" "aarch64-linux" "x86_64-linux" "armv7l-linux" )
+                  architectures=("x86_64-linux")
                   mkdir -p binaries
                   for architecture in "${architectures[@]}"; do
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
