--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,13 +75,12 @@ jobs:
 
             - name: Publish binaries
               run: |
-                  set -x
                   architectures=("aarch64-darwin" "x86_64-darwin" "aarch64-linux" "x86_64-linux" "armv7l-linux" )
-                  architectures=("x86_64-linux")
+                  architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux")
                   mkdir -p binaries
                   for architecture in "${architectures[@]}"; do
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
-                      gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
+                      gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn-ctl:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
                       gh release upload v${{ steps.environment.outputs.release_version }} "gnosis-vpn-${architecture}" --clobber
                       gh release upload v${{ steps.environment.outputs.release_version }} "gnosis-vpn-ctl-${architecture}" --clobber
                   done
