--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -83,7 +83,7 @@ jobs:
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
                       ls -alR binaries
-                      ls -alR .
+                      echo gh release upload v${{ steps.environment.outputs.release_version }} "./binaries/gnosis-vpn-${architecture}" --clobber
                       gh release upload v${{ steps.environment.outputs.release_version }} "./binaries/gnosis-vpn-${architecture}" --clobber
                       gh release upload v${{ steps.environment.outputs.release_version }} "./binaries/gnosis-vpn-ctl-${architecture}" --clobber
                   done
