--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -78,19 +78,17 @@ jobs:
                   set -x
                   architectures=("aarch64-darwin" "x86_64-darwin" "aarch64-linux" "x86_64-linux" "armv7l-linux" )
                   architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux")
-                  #echo "${{ secrets.GH_RUNNER_TOKEN }}" gh auth login --with-token
+                  echo "${{ secrets.GH_RUNNER_TOKEN }}" | gh auth login --with-token
                   mkdir -p binaries
                   for architecture in "${architectures[@]}"; do
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
-                      ls -alR binaries
-                      gh release view v${{ steps.environment.outputs.release_version }}
                       echo gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-${architecture}" --clobber
                       gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-${architecture}" --clobber
                       gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-ctl-${architecture}" --clobber
                   done
-              env:
-                GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
+              # env:
+              #   GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
 
             # - name: Tag version in git
             #   run: |
