--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,7 +76,7 @@ jobs:
             - name: Publish binaries
               run: |
                   set -x
-                  architectures=("aarch64-darwin" "x86_64-darwin" "aarch64-linux" "x86_64-linux" "armv7l-linux" )
+                  architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
                   architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux")
                   echo "${{ secrets.GH_RUNNER_TOKEN }}" | gh auth login --with-token
                   mkdir -p binaries
@@ -84,6 +84,7 @@ jobs:
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
                       echo gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-${architecture}" --clobber
+                      sleep 1000000
                       gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-${architecture}" --clobber
                       gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-ctl-${architecture}" --clobber
                   done
