--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -83,10 +83,10 @@ jobs:
                   for architecture in "${architectures[@]}"; do
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
-                      echo gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-${architecture}" --clobber
-                      sleep 1000000
-                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-${architecture}" --clobber
-                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD//binaries/gnosis-vpn-ctl-${architecture}" --clobber
+                      echo gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber
+                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber || true
+                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-ctl-${architecture}" --clobber || true
+                      sleep 10000
                   done
               # env:
               #   GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
