--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -78,16 +78,12 @@ jobs:
                   set -x
                   architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
                   architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux")
-                  #echo ${{ secrets.GH_RUNNER_TOKEN }} | gh auth login --with-token
-                  echo "GH_RUNNER_TOKEN (base64) = $(echo ${GH_TOKEN} | base64)"
                   mkdir -p binaries
                   for architecture in "${architectures[@]}"; do
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
-                      echo gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber
-                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber || true
-                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-ctl-${architecture}" --clobber || true
-                      sleep 10000
+                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber
+                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-ctl-${architecture}" --clobber
                   done
               env:
                 GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
