--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
-    - uses: cachix/cachix-action@v15
+    - name: Use Nix Cache
+      uses: cachix/cachix-action@v15
       with:
         name: gnosis-vpn-client
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
