--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,12 +54,25 @@ jobs:
               with:
                   token: ${{ secrets.GH_RUNNER_TOKEN }}
 
-            - name: Setup GCP
-              id: gcp
-              uses: hoprnet/hopr-workflows/actions/setup-gcp@master
+            # - name: Setup GCP
+            #   id: gcp
+            #   uses: hoprnet/hopr-workflows/actions/setup-gcp@master
+            #   with:
+            #       google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
+            #       install-sdk: 'true'
+
+            - name: Install Nix
+              uses: cachix/install-nix-action@v29
               with:
-                  google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
-                  install-sdk: 'true'
+                  github_access_token: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Use Nix Cache
+              uses: cachix/cachix-action@v15
+              with:
+                  name: gnosis-vpn-client
+                  authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+              env:
+                  USER: runner
 
             - name: Setup environment variables
               id: environment
@@ -73,20 +86,19 @@ jobs:
             #       name: 'gnosis-vpn-client - v${{ steps.environment.outputs.release_version }}'
             #       tag_name: v${{ steps.environment.outputs.release_version }}
 
-            - name: Publish binaries
-              run: |
-                  set -x
-                  architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
-                  architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux")
-                  mkdir -p binaries
-                  for architecture in "${architectures[@]}"; do
-                      gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
-                      gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
-                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber
-                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-ctl-${architecture}" --clobber
-                  done
-              env:
-                GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
+            # - name: Publish binaries
+            #   run: |
+            #       architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
+            #       architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux")
+            #       mkdir -p binaries
+            #       for architecture in "${architectures[@]}"; do
+            #           gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
+            #           gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
+            #           gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber
+            #           gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-ctl-${architecture}" --clobber
+            #       done
+            #   env:
+            #     GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
 
             # - name: Tag version in git
             #   run: |
@@ -96,6 +108,7 @@ jobs:
             - name: Bump Version
               id: bump
               run: |
+                set -x
                 CURRENT_VERSION=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
 
                 # Split the version into components
@@ -124,13 +137,14 @@ jobs:
                 # capture group 1: version = "
                 # capture group 2: the version number
                 # capture group 3: "
-                sed -i.bak -E "s/(^version\s*=\s*\")([0-9]+\.[0-9]+\.[0-9]+)(\")/\1${BUMP_VERSION}\3/" Cargo.toml
+                sed -i.bak -E "s/(^version = \")([0-9]+\.[0-9]+\.[0-9]+)(\")/\1${BUMP_VERSION}\3/" Cargo.toml
                 rm Cargo.toml.bak
+                nix develop --command cargo generate-lockfile
                 echo "bump_version=${BUMP_VERSION}" >> $GITHUB_OUTPUT
 
             # - uses: EndBug/add-and-commit@v9
             #   with:
-            #       add: 'Cargo.toml'
+            #       add: 'Cargo.*'
             #       new_branch: main
             #       message: 'Bump to version ${{ steps.bump.outputs.bump_version }}'
             #       pathspec_error_handling: exitImmediately
