--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -111,22 +111,10 @@ jobs:
                 set -x
                 CURRENT_VERSION=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
 
-                # Validate CURRENT_VERSION
-                if [[ ! "$CURRENT_VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-                    echo "Error: CURRENT_VERSION is invalid: '$CURRENT_VERSION'"
-                    exit 1
-                fi
-                # Split the version into components
-                # Parse MAJOR, MINOR, PATCH
+                # Split the version into components MAJOR, MINOR, PATCH
+                declare -i MAJOR MINOR PATCH
                 IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
 
-                # Debug parsed values
-                echo "Parsed version: MAJOR=$MAJOR, MINOR=$MINOR, PATCH=$PATCH"
-
-                # Ensure variables are numeric
-                MAJOR=${MAJOR:-0}
-                MINOR=${MINOR:-0}
-                PATCH=${PATCH:-0}
                 # Bump the appropriate part
                 case "${{ inputs.release_type }}" in
                     major)
